<resources>
    <string name="app_name">Calculator</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="dot">.</string>
    <string name="clear">c</string>
    <string name="power">x<sup><small>y</small></sup></string>
    <string name="divide">\u00f7</string>
    <string name="comma">,</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">\u00d7</string>
    <string name="open_parenthesis">(</string>
    <string name="closing_parenthesis">)</string>
    <string name="tg">tg</string>
    <string name="factorial">!</string>
    <string name="ln">ln</string>
    <string name="log2">log<sub><small>2</small></sub></string>
    <string name="log10">log<sub><small>10</small></sub></string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="ctg">ctg</string>
    <string name="e">e</string>
    <string name="sqrt">\u221a</string>
    <string name="pi">\u03c0</string>
    <string name="percent">%</string>
    <string name="abs">abs</string>
    <string name="log">log</string>
    <string name="scientific_mode">scf mode</string>
    <string name="base_mode">base mode</string>
</resources>
